<resources>
    <string name="app_name">Cross Reference</string>
    <string name="mensagem_login">Bem Vindo!</string>
    <string name="login_solicitacao">Faça seu login</string>
    <string name="logo_coel">TODO</string>
    <string name="campo_usuario">Usuário</string>
    <string name="campo_senha">Senha</string>
    <string name="botao_login">Login</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">action_atualizar</string>
    <string name="action_config">Configurações</string>
    <string name="texto_titulo_menu">Lista de Produtos</string>
    <string name="nav_produtos">Produtos</string>
    <string name="nav_forum">Forum</string>
    <string name="nav_mensagens">Mensagens</string>
    <string name="nav_localizacao">Localização</string>
    <string name="nav_configuracoes">Configurações</string>
    <string name="nav_drawer_open">Abrir</string>
    <string name="nav_drawer_close">Fechar</string>
    <string name="texto_titulo_mensagem">Mensagens</string>
    <string name="texto_titulo_configuracao">Configurações</string>
    <string name="texto_titulo_forum">Forum</string>
    <string name="texto_titulo_produtos">Produtos</string>
    <string name="nav_sair">Sair</string>
    <string name="texto_titulo_descricao_produto">Descrição do produto</string>
    <string name="nav_home">Tela inicial</string>
</resources>