<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_produtos"
            android:title="@string/nav_produtos"
            android:icon="@drawable/ic_buscar_black"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_forum"
            android:title="@string/nav_forum"
            android:icon="@drawable/ic_forum_black"
            />
        <item
            android:id="@+id/nav_mensagns"
            android:title="@string/nav_mensagens"
            android:icon="@drawable/ic_chat_black"
            />
        <item
            android:id="@+id/nav_configuracoes"
            android:title="@string/nav_configuracoes"
            android:icon="@drawable/ic_configuracoes_black"
            />
        <item
            android:id="@+id/nav_sair"
            android:title="@string/nav_sair"
            android:icon="@drawable/ic_configuracoes_black"
            />
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_configuracoes_black"
            />
    </group>
</menu>