<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loginLogoCoel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_coel" />

    <TextView
        android:id="@+id/loginSaudacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/loginSolicitacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_solicitacao"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/campoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/campo_usuario"/>

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/campo_senha"/>

    <Button
        android:id="@+id/botaoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_login" />


</LinearLayout>